<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="css.mrauzi.favoritecontacts.MainActivity"
    android:orientation="vertical">

    <TextView
        android:text="@string/favorite_contacts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewTitle"
        android:textSize="18sp"
        android:textStyle="normal|bold"
        android:textAlignment="center" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.00"
        android:weightSum="1">

        <TextView
            android:text="@string/oda_nobunaga"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewName1Display"
            android:layout_weight="0.40" />

        <TextView
            android:text="@string/_555_3457"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewPhone1Display"
            android:layout_weight="0.14" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:text="@string/call"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button1Call"
            android:layout_weight="1" />

        <Button
            android:text="@string/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button1Text"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/toyotomi_hideyoshi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewName2Display"
            android:layout_weight="0.56" />

        <TextView
            android:text="@string/_555_6987"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewPhone2Display"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:text="Call"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button2Call"
            android:layout_weight="1" />

        <Button
            android:text="Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button2Text"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/tokugawa_ieyasu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewName3Display"
            android:layout_weight="0.16" />

        <TextView
            android:text="@string/_555_9034"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewPhone3Display"
            android:layout_weight="0.27" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:text="Call"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button3Call"
            android:layout_weight="1" />

        <Button
            android:text="Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button3Text"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>
